--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   carousel_slider: ^4.2.1
   fluentui_system_icons: ^1.1.215
   animated_splash_screen: ^1.3.0
+  syncfusion_flutter_charts: ^23.1.41
+  badges: ^3.1.2
+  flutter_glow: ^0.3.0
   ionicons: ^0.2.2
 
 dev_dependencies:
