--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
     sdk: flutter
   flutter_slidable: ^1.2.0
   hive: ^2.2.3
-  hive_flutter: ^1.1.0  
+  hive_flutter: ^1.1.0 
+   
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,13 +44,16 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   banner_carousel: ^1.2.1
   google_nav_bar: ^5.0.6
+  image_picker: ^1.0.4
   carousel_slider: ^4.2.1
+  
   fluentui_system_icons: ^1.1.215
   animated_splash_screen: ^1.3.0
   syncfusion_flutter_charts: ^23.1.41
   badges: ^3.1.2
   flutter_glow: ^0.3.0
   ionicons: ^0.2.2
+  
 
 dev_dependencies:
   flutter_test:
