--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  font_awesome_flutter: ^9.0.0
   fl_chart: ^0.64.0
   new_gradient_app_bar: ^0.2.0
   curved_navigation_bar: ^1.0.3
