--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: foodmenu
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ">=3.1.3 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,39 +28,30 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_splash_screen: ^1.3.0
+  badges: ^3.1.2
+  banner_carousel: ^1.2.1
+  carousel_slider: ^4.2.1
+  cupertino_icons: ^1.0.6
+  curved_navigation_bar: ^1.0.3
+  fl_chart: ^0.64.0
+  fluentui_system_icons: ^1.1.215
   flutter:
     sdk: flutter
-  flutter_slidable: ^1.2.0
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0 
-   
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  font_awesome_flutter: ^9.0.0
-  fl_chart: ^0.64.0
-  new_gradient_app_bar: ^0.2.0
-  curved_navigation_bar: ^1.0.3
-  banner_carousel: ^1.2.1
-  google_nav_bar: ^5.0.6
-  image_picker: ^1.0.4
-  carousel_slider: ^4.2.1
-  
-  fluentui_system_icons: ^1.1.215
-  animated_splash_screen: ^1.3.0
-  syncfusion_flutter_charts: ^23.1.41
-  badges: ^3.1.2
   flutter_glow: ^0.3.0
+  flutter_slidable: ^1.2.0
+  font_awesome_flutter: ^9.0.0
+  google_nav_bar: ^5.0.6
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  image_picker: ^1.0.4
   ionicons: ^0.2.2
-  
+  lottie: ^2.7.0
+  new_gradient_app_bar: ^0.2.0
+  syncfusion_flutter_charts: ^23.1.41
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  hive_generator: ^1.1.3
-  build_runner: ^2.1.11  
+  build_runner: ^2.1.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -68,13 +59,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
+  hive_generator: ^1.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -82,15 +74,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/
+    - assets/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
