--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   animated_splash_screen: ^1.3.0
   badges: ^3.1.2
+  google_fonts: ^4.0.4
   banner_carousel: ^1.2.1
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.6
