--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   badges: ^3.1.2
   flutter_slidable: ^3.0.1
+  provider: ^6.1.1
  
   banner_carousel: ^1.2.1
   carousel_slider: ^4.2.1
